// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link test on ios Link doesnt change inner text styles 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Hello
  </Text>
</View>
`;

exports[`Link test on ios Link renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  The Times
</View>
`;

exports[`Link test on ios TextLink renders correctly with children 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Object {
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`Link test on ios TextLink renders correctly with multiple styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`Link test on ios TextLink renders correctly with specific styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Object {
      "backgroundColor": "blue",
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;
